simulation/api-istio/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: api-istio
---
apiVersion: v1
kind: Namespace
metadata:
  name: istio-ingress
