simulation/api-istio/apis.yaml
apiVersion: v1
kind: Service
metadata:
  name: api1
  namespace: api-istio
  labels:
    app: api1
    service: api1
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: api1
---
apiVersion: v1
kind: Service
metadata:
  name: api2
  namespace: api-istio
  labels:
    app: api2
    service: api2
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: api2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api1
  namespace: api-istio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api1
      version: v1
  template:
    metadata:
      labels:
        app: api1
        version: v1
    spec:
      serviceAccountName: api1
      containers:
      - image: daime/http-dump
      #- image: httpbin/yerinu:latest
        imagePullPolicy: IfNotPresent
        name: api1
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api2
  namespace: api-istio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api2
      version: v1
  template:
    metadata:
      labels:
        app: api2
        version: v1
    spec:
      serviceAccountName: api2
      containers:
      - image: daime/http-dump
        imagePullPolicy: IfNotPresent
        name: api2
        ports:
        - containerPort: 80
