simulation/api-istio/istio.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: api
  namespace: api-istio
spec:
  mtls:
    mode: STRICT
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: api-gateway
  namespace: api-istio
spec:
  selector:
    istio: ingressgateway # Associates the Istio Ingress gateway Pod with the Gateway resource
    #app: api-gateway
  servers:
  - port:  # Instructs the load balancer to route traffic on port 443 on HTTPS to the Ingress gateway
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: ISTIO_MUTUAL  # Enable mTLS
      credentialName: api-credential # Points to a Kubernetes Secret in security.sh, which carries TLS keys
    hosts:
    - '*' # instructs the load balancer to route traffic on port 443 on HTTPS to the ingress gateway for any hostname
  - port: # Instructs the load balancer to route traffic on port 80 on HTTP to the Ingress gateway for any hostname
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
    tls:
      httpsRedirect: true    # Redirects any HTTP traffic to the HTTPS endpoint

---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: api1
  namespace: api-istio
spec:
  hosts:
  - api.example.com  # applicable only for requests coming to the api.example.com
  gateways:
  - api-gateway
  http:
  - name: "api1 route"
    match:
    - uri:
        exact: /api1
    rewrite:
      uri: /
    route:
    - destination:
        host: api1
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: api2
  namespace: api-istio
spec:
  hosts:
    - 'api.example.com'
  gateways:
    - api-gateway
  http:
    - name: "api2 route"
      match:
        - uri:
            prefix: /api2
      rewrite:
        uri: /
      route:
        - destination:
            host: api2
